@@ -1,3 +1,7 @@
+- Fix issue 13 : return http 1.0 compatible response (not chunked) when 
+                 request http version is 1.0
+  [cliff.wells]
+
 - Enhance logging mechanism
   [Stephane Klein]
 
